--- a/SaharokServerClient/ObjectsToFormProjectClient/ObjectsToFormProjectClient.csproj
+++ b/SaharokServerClient/ObjectsToFormProjectClient/ObjectsToFormProjectClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{54FB743C-4894-48B5-8C45-6BD3C95DFE60}</ProjectGuid>
+    <ProjectGuid>{960D92AE-E666-4A97-880B-0D1FB8CA21E2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ObjectsProject</RootNamespace>
-    <AssemblyName>ObjectsProject</AssemblyName>
+    <RootNamespace>ObjectsToFormProject</RootNamespace>
+    <AssemblyName>ObjectsToFormProject</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,13 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomMethods.cs" />
-    <Compile Include="FileSection.cs" />
-    <Compile Include="Project.cs" />
+    <Compile Include="Objects.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Section.cs" />
-    <Compile Include="TypeDocumentation.cs" />
-    <Compile Include="TypeFile.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ObjectsProjectClient\ObjectsProjectClient.csproj">
+      <Project>{54fb743c-4894-48b5-8c45-6bd3c95dfe60}</Project>
+      <Name>ObjectsProjectClient</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
