--- a/SaharokServerClient/Saharok/App.config
+++ b/SaharokServerClient/Saharok/App.config
@@ -1,6 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
-    </startup>
+
+	<configSections>
+		<section name="ProjectFolders" type="Saharok.ProjectFoldersConfigSection, Saharok"/>
+		<section name="SectionNameTemplate" type="Saharok.SectionNameTemplateConfigSection, Saharok"/>
+		<section name="IgnoredExtensions" type="Saharok.IgnoredExtensionsConfigSection, Saharok"/>
+	</configSections>
+
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+	</startup>
+
+	
+	<appSettings>
+		<!--Настройка максимального количества приложений для обработки файлов-->
+		<add key="MaxCountWord" value="1" />
+		<add key="MaxCountExcel" value="1" />
+		<add key="MaxCountKompas" value="1" />
+		<add key="MaxCountAutoCAD" value="1" /> <!--Внимание! Ставить строго не более одного приложения AutoCAD-->
+		<add key="MaxCountNanoCAD" value="1" />
+
+		<!--Настройка расширений файлов, которые будут обрабатываться соответсвующими программами-->
+		<add key ="PDFExtensions" value="pdf"/>
+		<add key ="WordExtensions" value="docm, doc, docx"/>
+		<add key ="ExcelExtensions" value="xlsm, xlsx, xls"/>
+		<add key ="KompasExtensions" value="cdw"/>
+		<add key ="AutoCADExtensions" value=""/> <!--Чтобы поменять программу для dwg файлов поменяйте значение у AutoCAD'а и NanoCAD'а-->
+		<add key ="NanoCADExtensions" value="dwg"/> <!--В данный момент файлы dwg будут обрабатываться NanoCAD'ом-->
+		
+		<!--Файлы с данными расширениями не будут конвертироваться в PDF файлы, но будут попадать в ZIP архивы-->
+		<add key ="DontPDFExtensions" value="png, bmp, jpeg, jpg, jfif"/>
+		<!--Файлы с данными расширениями полностью игнорируются в папке с редактируемыми файлами-->
+		<add key ="IgnoredExtensions" value="bak, tmp, sс$, dwl, cd~, original"/>
+
+		<add key="NanoCADVersion" value="" /><!--Позволяет явно указать версию запускаемого NanoCAD'а, например "20.0", "11.0", "10.0", "8.0", пустое значение запускает версию по умолчанию-->
+	</appSettings>
+
+
+	<!--Настройка папки проекта.
+	Этот раздел настроек позволяет сконфигурировать количество и названия папок в проекте и их назначение.
+	Чтобы добавить новую папку необходимо между тегами <Folders></Folders> вписать теги <Folder Name="Имя папка"></Folder>
+	и присвоить имя папки. Чтобы добавить вложенные папки в родительскую папку, необходимо между тегами родительской папки <Folder></Folder> 
+	добавить теги <Folders></Folders> и в них вписать количество и названия папок как указано выше. 
+	Это позволяет гибко настроить папки любой степени вложенности в проекте. Папки создаются автоматически при создании нового проекта.
+	Папки могут обладать дополнительными свойствами. Так например, чтобы указать в какой папке будут хранится редактируемые файлы проекта,
+	этой папке необходимо присвоить параметр WorkingDirectory="true" внутри тега <Folder WorkingDirectory="true">.
+	Этот параметр обязателен и может быть только у одной папки и он не совместим с другими параметрами, речь о которых пойдёт далее.
+	Параметр OutputPageByPagePDF указывает в какую папку будут постранично сконвертированы PDF файлы. Он также является обязательным и 
+	может быть только у одной папки. 
+	OutputFilesPDF и OutputFilesZIP параметры указывают в какие папки будут склеены готовые PDF альбомы и ZIP архивы разделов документаций.
+	Они не являются обязательными, могут быть у нескольких папок, могут применяться вместе в одной папке.-->
+	<ProjectFolders>
+		<Folders>
+			<Folder Name="PDF постранично" OutputPageByPagePDF="true"></Folder>
+			<Folder Name="Готовый проект">
+				<Folders>
+					<Folder Name="На отправку" OutputFilesPDF="true"></Folder>
+					<Folder Name="На сервер" OutputFilesPDF="true" OutputFilesZIP="true"></Folder>
+				</Folders>
+			</Folder>
+			<Folder Name="Исходные данные"></Folder>
+			<Folder Name="Редактируемые файлы" WorkingDirectory="true">
+				<Folders>
+					<Folder Name="ПД"></Folder>
+					<Folder Name="РД"></Folder>
+				</Folders>
+			</Folder>
+		</Folders>
+	</ProjectFolders>
+
+	<!--SectionNameTemplate позволяет настроить шаблон имени готового альбома раздела документации.
+	Шаблон представляет собой строку, которая имеет переменные. Переменная - это зарезервированный текст межу вертикальными || чертами.
+	Переменные, которые заменяются на значения из настроек проекта:
+	- |название проекта|
+	- |шифр проекта|
+	- |раздел документации|
+	В строке шаблона может быть любой другой текст, который останется неизменным.
+
+	Примеры возможных шаблонов:
+
+	переменные принимают значение из настроек проекта:
+	|название проекта| = Трудовик
+	|шифр проекта| = 01.2020
+	|раздел документации| = 01 ЭВ (название конечной папки в которой хранятся редактируемые файлы)
+
+	Template="|раздел документации| |шифр проекта|-|раздел документации| |название проекта|"	- пример строки шаблона
+	01 01.2020-ЭВ Трудовик.pdf	- полученное имя готового раздела
+
+	Template="|название проекта|_Иванов_Лучший работник_|шифр проекта| |раздел документации|"	- второй пример
+	Трудовик_Иванов_Лучший работник_01.2020 01 ЭВ.pdf
+
+	Из первого примера можно увидеть, что переменная |раздел документации| может иметь составное значение (состоять из двух и более подстрок),
+	делителем является символ присвоенный параметру Separator (Separator=" " - делителем будет являться знак пробела в имени папки).
+	'01 ЭВ' делится на две подстроки '01' и 'ЭВ', которые последовательно подставляются в имя готового раздела.
+	Во втором примере |раздел документации| встречается в шаблоне 1 раз, в этом случае '01 ЭВ' будет вставлено полностью.
+	Если в первом примере имя папки было бы равно '01 ЭВ 2021', то при том же шаблоне были бы получены 2 подстроки '01' и 'ЭВ 2021',
+	т.к. |раздел документации| встречается в шаблоне всего 2 раза, если |раздел документации| встречался бы в шаблоне 3 раза,
+	то из '01 ЭВ 2021' было бы получено 3 подстроки '01', 'ЭВ' и '2021', как в примере ниже:
+
+	Template="|раздел документации|__|раздел документации|__|раздел документации|"
+	01__ЭВ__2021.pdf
+	
+	Если |раздел документации| больше чем подстрок в имени папки, то в недостающие пропускаются:
+	Template="|раздел документации|__|раздел документации|__|раздел документации|++|раздел документации|++|раздел документации|"
+	01__ЭВ__2021++++.pdf
+
+	Для корректной работы |раздел документации| должен встречаться в шаблоне минимум один раз, т.к. только он является уникальным в шаблоне, на основе которого
+	присваиваются имена готовых альбомов разделов документаций проекта.
+	В Separator можно присвоить только один символ(" ", "~", "_" и т.п.), строки не поддерживаются.
+	-->
+	<SectionNameTemplate Template="|раздел документации| |шифр проекта|-|раздел документации| |название проекта|" Separator=" " />
+
+	
+
+
 </configuration>
