--- a/SaharokServerClient/SaharokAdmin/App.config
+++ b/SaharokServerClient/SaharokAdmin/App.config
@@ -1,6 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+	<configSections>
+		<section name="ProjectServers" type="SaharokAdmin.ServersConfigSection, SaharokAdmin"/>
+	</configSections>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+	</startup>
+
+	<ProjectServers>
+		<Servers>
+			<Server IP="109.68.215.3"	AdminPort="8903"	ServerNumber="1"/><!--MySaharok-->
+			<Server IP="5.23.54.220"	AdminPort="8904"	ServerNumber="2"/><!--MySaharok-->
+			<Server IP="109.68.215.3"	AdminPort="9103"	ServerNumber="3"/><!--SEP33-->
+			<Server IP="5.23.54.220"	AdminPort="9104"	ServerNumber="4"/><!--SEP33-->
+			<Server IP="109.68.215.3"	AdminPort="9113"	ServerNumber="5"/><!--PKB_energo-->
+			<Server IP="5.23.54.220"	AdminPort="9114"	ServerNumber="6"/><!--PKB_energo-->
+		</Servers>
+	</ProjectServers>
+	
+	<!--
+	109.68.215.3
+	5.23.54.220   
+	127.0.0.1 -->
+
 </configuration>
