--- a/SaharokServerClient/SaharokServer/App.config
+++ b/SaharokServerClient/SaharokServer/App.config
@@ -1,8 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <appSettings>
-    <add key="ServerNumber" value="1" />
-    <add key="UserPort" value="8889" />
-    <add key="AdminPort" value="8909" />
-  </appSettings>
+
+	<configSections>
+		<section name="ProjectServers" type="SaharokServer.ServersConfigSection, SaharokServer"/>
+	</configSections>
+
+	<ProjectServers>
+		<Servers>
+			<Server ServerNumber="1" UserPort="8901" AdminPort="8903" AllowUsingNewClient="True" DBname="MySaharok"/>
+			<!--<Server ServerNumber="2" UserPort="8902" AdminPort="8904" AllowUsingNewClient="True" DBname="MySaharok"/>-->
+			<Server ServerNumber="3" UserPort="9101" AdminPort="9103" AllowUsingNewClient="True" DBname="SEP33"/>
+			<!--<Server ServerNumber="4" UserPort="9102" AdminPort="9104" AllowUsingNewClient="True" DBname="SEP33"/>-->
+			<Server ServerNumber="5" UserPort="9111" AdminPort="9113" AllowUsingNewClient="True" DBname="PKB_energo"/>
+			<!--<Server ServerNumber="6" UserPort="9112" AdminPort="9114" AllowUsingNewClient="True" DBname="PKB_energo"/>-->
+		</Servers>
+	</ProjectServers>
+
+	<appSettings>
+		<!--<add key="" value="" />-->
+	</appSettings>
+
 </configuration>
+
+
+
+
