--- a/SaharokServerClient/SaharokAdmin/SaharokAdmin.csproj
+++ b/SaharokServerClient/SaharokAdmin/SaharokAdmin.csproj
@@ -37,6 +37,7 @@
       <HintPath>..\packages\CommandLineParser.2.8.0\lib\net461\CommandLine.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
@@ -53,6 +54,7 @@
     <Compile Include="Client\Encryption\MyRijndael.cs" />
     <Compile Include="Client\Encryption\MyRSA.cs" />
     <Compile Include="Client\Type1ToType2DeserializationBinder.cs" />
+    <Compile Include="ConfigSections\ServersConfigSection.cs" />
     <Compile Include="CustomMethods.cs" />
     <Compile Include="ErrorHandling.cs" />
     <Compile Include="Program.cs" />
