--- a/SaharokServerClient/Saharok/App.config
+++ b/SaharokServerClient/Saharok/App.config
@@ -25,8 +25,8 @@
 		<add key ="WordExtensions" value="docm, doc, docx"/>
 		<add key ="ExcelExtensions" value="xlsm, xlsx, xls"/>
 		<add key ="KompasExtensions" value="cdw"/>
-		<add key ="AutoCADExtensions" value=""/> <!--Чтобы поменять программу для dwg файлов поменяйте значение у AutoCAD'а и NanoCAD'а-->
-		<add key ="NanoCADExtensions" value="dwg"/> <!--В данный момент файлы dwg будут обрабатываться NanoCAD'ом-->
+		<add key ="AutoCADExtensions" value="dwg"/> <!--Чтобы поменять программу для dwg файлов поменяйте значение у AutoCAD'а и NanoCAD'а--> <!--В данный момент файлы dwg будут обрабатываться AutoCAD'ом-->
+		<add key ="NanoCADExtensions" value=""/> <!--В данный момент файлы dwg будут обрабатываться NanoCAD'ом-->
 		
 		<!--Файлы с данными расширениями не будут конвертироваться в PDF файлы, но будут попадать в ZIP архивы-->
 		<add key ="DontPDFExtensions" value="png, bmp, jpeg, jpg, jfif"/>
